--- a/SmartLock/app/src/main/res/layout/activity_luces.xml
+++ b/SmartLock/app/src/main/res/layout/activity_luces.xml
@@ -30,6 +30,23 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Alcoba principal"
+            android:id="@+id/tv2"
+            android:layout_gravity="bottom"
+            android:textSize="30dp"
+            android:textColor="#000000"
+            android:textAlignment="center" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -51,5 +68,39 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"></LinearLayout>
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Sala"
+            android:id="@+id/tv3"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:layout_gravity="center_vertical"
+            android:textSize="30dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Apagar"
+            android:id="@+id/btn3"
+            android:layout_weight="1"
+            android:layout_gravity="top|center" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Prender"
+            android:id="@+id/btn4"
+            android:layout_weight="1"
+            android:layout_gravity="top|center" />
+    </LinearLayout>
 </LinearLayout>
